--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("../html5/src/reset.css");
+@import url("../html5/assets/reset.css");
 @import url("./elegant_font/style.css");
 
 body {
