expand top navbar to full width

--- a/yc/assets/style.css
+++ b/yc/assets/style.css
@@ -46,6 +46,9 @@ header {
 #top-search .form-group {
 	padding: 0;
 }
+.navbar#top-bar > * {
+	padding: 0;
+}
 .marquee-price {
 	overflow: hidden;
 }
