update index.html add portfolio page

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,34 +5,33 @@
 body {
 	color: #000;
 	background-color: #F0EFEB;
-	margin: 0px;
-	padding: 0px;
 	font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
-	font-size: 1em;
-	line-height: 1;
 }
 img {
 	border: none;
 }
+.container {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100svh;
+	margin: 0 auto;
+}
 .box {
 	margin: 0 auto;
 	text-align: center;
-	padding: 20px 0px;
-	width: 320px;
+	padding: 1.25rem 0px;
+	width: 25rem;
 	background-color: #FFFFFF;
 	border-radius: 2%;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
-	
 }
 @keyframes flyin {
-	to { top:30%; margin: -160px auto auto -160px; }
+	to { transform: translate(0, 0); }
 }
-@media all and (min-height:541px) and (min-width:481px) { /* height < 500 */
+@media all and (min-width:576px) {
 	.box {
-		position: absolute;
-		top: -50%;
-		left: 50%;
-		margin: -300px auto auto -160px;
+		transform: translate(0, -20rem);
 		animation: flyin 1.0s ease-out 0.2s;
 		animation-fill-mode: forwards;
 	}
@@ -46,7 +45,7 @@ h1.title {
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 #shutter {
-	margin: 20px auto;
+	margin: 1rem auto;
 	width: 128px;
 	height: 128px;
 	border-radius: 50%;
@@ -84,7 +83,7 @@ h1.title {
 	to { opacity:0.4; }
 }
 
-@media all and (min-width:481px) {
+@media all and (min-width: 576px) {
 	.avatar i {
 		opacity: 0;
 		animation: emerge 0.8s linear 1.0s;
@@ -93,20 +92,19 @@ h1.title {
 }
 
 .notice {
-	height: 1em;
-	padding: 1em 0px;
+	height: 2rem;
+	padding: 2rem 0px;
 	justify-content: center;
 }
 
 .notice p {
 	font-family: Menlo, Consolas, Monaco, Courier, monospace;
-	font-size: 0.6;
-	line-height: 1.2;
+	font-size: 1rem;
 	color: #999;
 	margin: 0 auto;
 	overflow: hidden;
 	white-space: nowrap;
-	letter-spacing: .02em;
+	letter-spacing: .02rem;
 	border-right: 2px solid transparent;
 }
 .notice p:nth-child(2) {
@@ -151,18 +149,21 @@ h1.title {
 }
 
 .links {
-	margin: 30px auto 0;
+	margin: 2rem auto 0;
+	display: flex;
+	flex-flow: row;
+	justify-content: center;
+	gap: 0 1rem;
 }
 .links li {
-	display: inline-block;
+	display: block;
 	position: relative;
-	font-size: 16px;
-	height: 1.5em;
-	width: 1.5em;
-	margin: 0 0.4em;
+	font-size: 1.5rem;
+	height: 2rem;
+	width: 2rem;
 	color: #ccc;
 	border-radius: 50%;
-	transform: translate(0, 2.2em);
+	transform: translate(0, 3rem);
 	animation: floatup 1.0s ease-out;
 	animation-fill-mode: forwards;
 	opacity: 0;
@@ -184,8 +185,8 @@ h1.title {
 }
 
 @keyframes floatup {
-	0% {transform:translate(0, 2.2em); opacity: 0;}
-	70% {transform:translate(0, -0.1em); opacity: 1;}
+	0% {transform:translate(0, 3rem); opacity: 0;}
+	70% {transform:translate(0, -0.2rem); opacity: 1;}
 	100% {transform:translate(0, 0); opacity: 1;}
 }
 
@@ -201,9 +202,9 @@ h1.title {
 }
 .links li span {
 	display: block;
-	padding: 0em;
+	padding: 0;
 	font-weight: normal;
-	line-height: 1.5em;
+	line-height: 2.25rem;
 }
 .links li a {
 	display: block;
@@ -226,50 +227,49 @@ h1.title {
 	color: #888;
 }
 
-#footer {
+.footer {
 	font-weight: normal;
 	font-size: 0.8em;
 	color: #C6C4BA;
 	text-align: center;
-	padding: 2em 0;
+	padding: 1rem 0;
 	width: 100%;
-	position: absolute;
-	bottom: 0px;
-}
-
-@media all and (max-height:380px) and (min-width:481px) { /* height < 360 and width > 480*/
-	#footer {
-		display: none;
-	}
 }
 
 /* mobile styles */
 
-@media all and (max-width:480px) { /* width < 480*/
+@media all and (max-width: 575.98px) {
+	.header {
+		display: none;
+	}
 	.box {
-		position: static;
+		width: 100%;
 		margin: 0 auto;
 		border-radius: 0;
 	}
 	.links {
+		flex-flow: column;
 		border-top: 1px solid #ddd;
 		overflow: hidden;
 	}
 	.links li {
-		display: block;
 		opacity: 1;
-		width: auto;
-		height: 48px;
-		line-height: 48px;
+		width: 100%;
+		display: flex;
+		flex-flow: row nowrap;
+		align-items: center;
+		justify-content: space-between;
+		flex-grow: 0 1 0;
+		height: auto;
 		margin: 0;
 		border-bottom: 1px solid #ddd;
 		border-radius: 0;
-		transform: translate(320px,0);
+		transform: translate(30rem,0);
 		animation: slidein 0.8s ease-out;
 		animation-fill-mode: forwards;
 	}
 	@keyframes slidein {
-		to { transform:translate(0,0); }
+		to { transform: translate(0,0); }
 	}
 	.links li:nth-child(1) {
 		animation-delay: 0s;
@@ -286,80 +286,32 @@ h1.title {
 	.links li:nth-child(5) {
 		animation-delay: 0.8s;
 	}
-	.links li::before {
-		position: absolute;
-		top: 0;
-		left: 0;
-	}
+
 	.links li a {
 		display: block;
 		position: static;
-		width: auto;
-		margin-left: 0;
-		font-size: 16px;
-		height: 3em;
-		text-indent: 3em;
+		width: 100%;
+		min-width: 10rem;
+		font-size: 1rem;
+		text-indent: 0;
+		height: 2rem;
+		line-height: 2rem;
 	}
 	.links li span {
 		display: block;
-		position: absolute;
-		top: 0;
-		padding: 12px;
-		font-size: 24px;
-		line-height: 1em;
+		padding: 0 0.75rem;
+		font-size: 1.5rem;
+		line-height: 1.75rem;
 	}
 	.links li i {
 		display: block;
-		text-align: right;
-		position: absolute;
-		top: 0;
-		right: 0em;
 		color: #ddd;
 		text-indent: 0;
-		font-size: 32px;
+		font-size: 1.5rem;
+		line-height: 1.75rem;
 	}
 	.links li i::before {
 		font-family: ElegantIcons;
 		content: "5";
 	}
-	
-	#footer {
-		position: static;
-	}
-}
-
-@media all and (max-width:480px) and (min-height:630px) { /* height > 620 and width < 480*/
-	.box {
-		margin: 30px auto 0;
-	}
-	#footer {
-		position: absolute;
-	}
-}
-
-/* update old browser */
-
-#updateOldBrowser {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	background: #ff6;
-	color: #000;
-	border-bottom: 1px solid #999;
-	font-family: "PingFang TC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
-	display: none;
-}
-#updateOldBrowser h2 {
-	font-size: 20px;
-	font-weight: bold;
-	padding: 20px 0 5px;
-	width: 600px;
-	margin: 0 auto;
-}
-#updateOldBrowser p {
-	font-size: 14px;
-	padding: 5px 0 10px;
-	width: 600px;
-	margin: 0 auto;
 }
